# Chess

./: .Chess.code-workspace  .gitignore  .pre-commit-config.yaml  install-pyenv-win.ps1  pyproject.toml
.cspell/: dictionary.txt
chess/: __main__.py
